# unicef-restlib

./: .gitignore  .isort.cfg  .travis.yml  CHANGES  MANIFEST.in  Makefile  Pipfile  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
src/requirements/: install.pip  testing.pip
src/unicef_restlib/: __init__.py  fields.py  metadata.py  pagination.py  routers.py  serializers.py  utils.py  views.py
tests/: .coveragerc  conftest.py  factories.py  test_fields.py  test_metadata.py  test_pagination.py  test_permissions.py  test_serializers.py  test_utils.py  test_views.py
tests/demoproject/demo/: settings.py  urls.py
tests/demoproject/demo/sample/: fields.py  metadata.py  models.py  serializers.py  urls.py  utils.py  views.py
tests/demoproject/demo/sample/migrations/: 0001_initial.py
